<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Doseli</string>
    <string name="resumen">Resumen</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_login">Inicio</string>
    <string name="update_status_title">Reportar</string>
    <string name="update_status_stolen">Bajas</string>
    <string name="update_location">Posicionar Aparato</string>
    <string name="logout_title">Cerrar Sesión</string>
    <string name="title_activity_update_status">Reporte de Aparatos</string>
    <string name="pending">Enviar Pendientes</string>
    <string name="title_activity_status_detail_view">Aparato</string>
    <string name="url">URL</string>
    <string name="aid">ID</string>
    <string name="textaid">Aparato #</string>
    <string name="token">TOKEN</string>
    <string name="comment">COMENTARIO</string>
    <string name="send">Enviar Reporte</string>
    <string name="error1">Daño Físico</string>
    <string name="error2">Batería Baja</string>
    <string name="error3">Falta Liquido</string>
    <string name="solucion1">Reparación</string>
    <string name="solucion2">Cambio de Baterías</string>
    <string name="solucion3">Cambio de Líquido</string>
    <string name="title_activity_capture_layout">CaptureLayout</string>
    <string name="title_activity_report_stolen">Bajas</string>
    <string name="title_activity_handset_register">Altas</string>
    <string name="title_activity_handset_location">Posicionar Aparato</string>
    <string name="title_activity_custom_missing_check">CustomMissingCheck</string>
    <string name="title_activity_user_hospitals">Mis Hospitales</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_handsets">Aparatos</string>
    <string name="handsets">Lista de Aparatos</string>
    <string name="title_activity_full_report_detail_view">Reporte de Aparato</string>
    <string name="title_activity_admin">Administrador</string>
    <string name="admin">Administrador</string>
    <string name="maint1">Limpieza de Charola</string>
    <string name="maint2">Limpieza de Aparato</string>

    <string name="send_delete">Enviar Baja</string>

    <string-array name="drawer_main_array">
        <item>Altas</item>
        <item>Posicionar Aparato</item>
        <item>Reportar</item>
        <item>Bajas</item>
        <item>Lista de Aparatos</item>
        <item>Mis Hospitales</item>
        <item>Enviar Pendientes</item>
        <item>Administrador</item>
    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="tvHospitalGroup">GRUPO:</string>
    <string name="tvHsp">HOSPITAL:</string>
    <string name="tvVersion">ver: x.x.x</string>
    <string name="tvLogin">INICIAR SESIÓN</string>
    <string name="scan_button">Scan</string>
    <string name="handset_id">APARATO</string>
    <string name="cb_error">Errores</string>
    <string name="cb_no_error">Funciona</string>


</resources>
