<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".HomepageActivity">

    <item
        android:id="@+id/update_status"
        android:orderInCategory="100"
        android:title="@string/update_status_title"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/update_register_device"
        android:orderInCategory="100"
        android:title="@string/title_activity_handset_register"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/update_location"
        android:orderInCategory="100"
        android:title="@string/update_location"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/update_stolen"
        android:orderInCategory="100"
        android:title="@string/update_status_stolen"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/send_pending"
        android:orderInCategory="100"
        android:title="@string/pending"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/handsets"
        android:orderInCategory="100"
        android:title="@string/handsets"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/logout"
        android:orderInCategory="100"
        android:title="@string/logout_title"
        app:showAsAction="never" />
</menu>
